--- a/PortExistingExcel.ipynb
+++ b/PortExistingExcel.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -42,49 +42,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-03-23</td>\n",
+       "      <th>67</th>\n",
+       "      <td>2020-04-24</td>\n",
        "      <td>Amazon</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-03-23</td>\n",
-       "      <td>Amazon</td>\n",
+       "      <th>68</th>\n",
+       "      <td>2020-04-25</td>\n",
+       "      <td>UPS</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-03-23</td>\n",
-       "      <td>Amazon</td>\n",
+       "      <th>69</th>\n",
+       "      <td>2020-04-26</td>\n",
+       "      <td>Fed Ex</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-03-24</td>\n",
-       "      <td>Amazon</td>\n",
+       "      <th>70</th>\n",
+       "      <td>2020-04-26</td>\n",
+       "      <td>UPS</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-03-24</td>\n",
+       "      <th>71</th>\n",
+       "      <td>2020-04-25</td>\n",
        "      <td>Amazon</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Date Company MyHouse\n",
-       "0 2020-03-23  Amazon      No\n",
-       "1 2021-03-23  Amazon      No\n",
-       "2 2022-03-23  Amazon      No\n",
-       "3 2020-03-24  Amazon      No\n",
-       "4 2020-03-24  Amazon     Yes"
+       "         Date Company MyHouse\n",
+       "67 2020-04-24  Amazon      No\n",
+       "68 2020-04-25     UPS      No\n",
+       "69 2020-04-26  Fed Ex      No\n",
+       "70 2020-04-26     UPS      No\n",
+       "71 2020-04-25  Amazon      No"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
     "\n",
     "df = df.rename(columns={'My House?': 'MyHouse'})\n",
     "clean_df = df[[\"Date\", \"Company\", \"MyHouse\"]]\n",
-    "clean_df.head()"
+    "clean_df.tail()"
    ]
   },
   {
