Update graph labels

--- a/NeighborhoodDeliveriesSummary.ipynb
+++ b/NeighborhoodDeliveriesSummary.ipynb
@@ -186,7 +186,7 @@
     "### How busy is each day?\n",
     "Weekdays are definitely the busiest but there is still some considerable traffic on the weekends.\n",
     "\n",
-    "**The following data will contain only Amazon, FedEx and UPS deliveries\""
+    "**The following data will contain only Amazon, FedEx and UPS deliveries**"
    ]
   },
   {
